--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -645,6 +645,9 @@ video {
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.rounded {
+	border-radius: 0.25rem;
+}
 .border {
 	border-width: 1px;
 }
@@ -654,6 +657,10 @@ video {
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .p-8 {
 	padding: 2rem;
@@ -674,11 +681,22 @@ video {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
 .pt-12 {
 	padding-top: 3rem;
 }
 .text-center {
 	text-align: center;
+}
+.font-sans {
+	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .text-5xl {
 	font-size: 3rem;
@@ -691,12 +709,19 @@ video {
 .font-light {
 	font-weight: 300;
 }
+.font-thin {
+	font-weight: 100;
+}
 .uppercase {
 	text-transform: uppercase;
 }
 .text-indigo-500 {
 	--tw-text-opacity: 1;
 	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 html {
