--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -586,25 +586,21 @@ video {
 	--tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
 	--tw-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
-.mx-auto {
-	margin-left: auto;
-	margin-right: auto;
+.mx-6 {
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
 }
 .my-12 {
 	margin-top: 3rem;
 	margin-bottom: 3rem;
 }
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
 .mx-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
-}
-.mx-8 {
-	margin-left: 2rem;
-	margin-right: 2rem;
-}
-.mx-6 {
-	margin-left: 1.5rem;
-	margin-right: 1.5rem;
 }
 .mt-4 {
 	margin-top: 1rem;
@@ -612,29 +608,14 @@ video {
 .mt-12 {
 	margin-top: 3rem;
 }
-.mt-8 {
-	margin-top: 2rem;
-}
 .flex {
 	display: flex;
-}
-.grid {
-	display: grid;
-}
-.min-h-screen {
-	min-height: 100vh;
 }
 .w-full {
 	width: 100%;
 }
 .max-w-3xl {
 	max-width: 48rem;
-}
-.max-w-lg {
-	max-width: 32rem;
-}
-.max-w-md {
-	max-width: 28rem;
 }
 .max-w-sm {
 	max-width: 24rem;
@@ -644,9 +625,6 @@ video {
 }
 .flex-col {
 	flex-direction: column;
-}
-.flex-wrap {
-	flex-wrap: wrap;
 }
 .items-center {
 	align-items: center;
@@ -681,8 +659,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
-.p-8 {
-	padding: 2rem;
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
@@ -700,14 +683,6 @@ video {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
-.py-4 {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-}
 .pt-12 {
 	padding-top: 3rem;
 }
@@ -717,17 +692,13 @@ video {
 .font-sans {
 	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
+}
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -742,16 +713,21 @@ html {
 	background-size: cover;
 }
 
-@media (min-width: 1024px) {
+.ui-main-wrapper {
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
+}
 
-	.lg\:mx-12 {
-		margin-left: 3rem;
-		margin-right: 3rem;
-	}
+@media (min-width: 1024px) {
 
 	.lg\:mx-auto {
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	.lg\:mx-12 {
+		margin-left: 3rem;
+		margin-right: 3rem;
 	}
 
 	.lg\:mt-0 {
@@ -764,6 +740,10 @@ html {
 
 	.lg\:grid {
 		display: grid;
+	}
+
+	.lg\:min-h-screen {
+		min-height: 100vh;
 	}
 
 	.lg\:w-1\/2 {
