--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -8,3 +8,8 @@ html {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+.ui-main-wrapper {
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
+}
