--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -608,6 +608,12 @@ video {
 .mt-12 {
 	margin-top: 3rem;
 }
+.mt-8 {
+	margin-top: 2rem;
+}
+.block {
+	display: block;
+}
 .flex {
 	display: flex;
 }
@@ -638,6 +644,27 @@ video {
 .justify-between {
 	justify-content: space-between;
 }
+.gap-4 {
+	gap: 1rem;
+}
+.gap-x-4 {
+	-moz-column-gap: 1rem;
+	     column-gap: 1rem;
+}
+.gap-y-2 {
+	row-gap: 0.5rem;
+}
+.gap-x-3 {
+	-moz-column-gap: 0.75rem;
+	     column-gap: 0.75rem;
+}
+.gap-x-2 {
+	-moz-column-gap: 0.5rem;
+	     column-gap: 0.5rem;
+}
+.gap-y-1 {
+	row-gap: 0.25rem;
+}
 .rounded-sm {
 	border-radius: 0.125rem;
 }
@@ -650,6 +677,26 @@ video {
 .border-t {
 	border-top-width: 1px;
 }
+.border-malibu-800 {
+	--tw-border-opacity: 1;
+	border-color: rgba(13, 164, 191, var(--tw-border-opacity));
+}
+.border-gray-800 {
+	--tw-border-opacity: 1;
+	border-color: rgba(31, 41, 55, var(--tw-border-opacity));
+}
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+.border-gray-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -661,6 +708,18 @@ video {
 .bg-gray-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-malibu-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(234, 245, 248, var(--tw-bg-opacity));
+}
+.bg-malibu-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 249, 250, var(--tw-bg-opacity));
+}
+.bg-malibu-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(207, 245, 252, var(--tw-bg-opacity));
 }
 .px-8 {
 	padding-left: 2rem;
@@ -699,6 +758,10 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -707,17 +770,19 @@ video {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+.font-medium {
+	font-weight: 500;
+}
+.font-light {
+	font-weight: 300;
 }
 .text-gray-800 {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.text-malibu-700 {
-	--tw-text-opacity: 1;
-	color: rgba(17, 205, 238, var(--tw-text-opacity));
 }
 .text-malibu-800 {
 	--tw-text-opacity: 1;
@@ -729,6 +794,19 @@ video {
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.transition-all {
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
 }
 
 html {
@@ -743,6 +821,40 @@ html {
 .ui-main-wrapper {
 	height: 100vh;
 	height: calc(var(--vh, 1vh) * 100);
+}
+
+.hover\:bg-malibu-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(207, 245, 252, var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+
+@media (min-width: 640px) {
+
+	.sm\:grid {
+		display: grid;
+	}
+
+	.sm\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-6 {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-5 {
+		grid-template-columns: repeat(5, minmax(0, 1fr));
+	}
 }
 
 @media (min-width: 1024px) {
