--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -660,9 +660,17 @@ video {
 .border {
 	border-width: 1px;
 }
-.border-gray-400 {
+.border-pizazz-400 {
 	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+	border-color: rgba(255, 166, 46, var(--tw-border-opacity));
+}
+.border-pizazz-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 187, 97, var(--tw-border-opacity));
+}
+.border-malibu-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(207, 245, 252, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -675,6 +683,57 @@ video {
 .bg-gray-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-pizazz-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 187, 97, var(--tw-bg-opacity));
+}
+.bg-pizazz-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 231, 199, var(--tw-bg-opacity));
+}
+.bg-pizazz-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 242, 225, var(--tw-bg-opacity));
+}
+.bg-malibu-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(207, 245, 252, var(--tw-bg-opacity));
+}
+.bg-malibu-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(227, 249, 254, var(--tw-bg-opacity));
+}
+.bg-opacity-20 {
+	--tw-bg-opacity: 0.2;
+}
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
+}
+.bg-gradient-to-tl {
+	background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+}
+.from-malibu-500 {
+	--tw-gradient-from: #70E1F5;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(112, 225, 245, 0));
+}
+.from-malibu-300 {
+	--tw-gradient-from: #CFF5FC;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(207, 245, 252, 0));
+}
+.from-malibu-200 {
+	--tw-gradient-from: #e3f9fe;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(227, 249, 254, 0));
+}
+.from-malibu-100 {
+	--tw-gradient-from: #eaf5f8;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(234, 245, 248, 0));
+}
+.to-pizazz-200 {
+	--tw-gradient-to: #FFD194;
+}
+.to-pizazz-100 {
+	--tw-gradient-to: #FFE7C7;
 }
 .px-8 {
 	padding-left: 2rem;
@@ -700,6 +759,10 @@ video {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
 .pt-12 {
 	padding-top: 3rem;
 }
@@ -709,9 +772,9 @@ video {
 .font-sans {
 	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-.text-2xl {
-	font-size: 1.5rem;
-	line-height: 2rem;
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-4xl {
 	font-size: 2.25rem;
@@ -725,6 +788,10 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
 .text-xs {
 	font-size: 0.75rem;
 	line-height: 1rem;
@@ -735,6 +802,12 @@ video {
 .font-medium {
 	font-weight: 500;
 }
+.uppercase {
+	text-transform: uppercase;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
 .text-gray-800 {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
@@ -742,6 +815,18 @@ video {
 .text-malibu-800 {
 	--tw-text-opacity: 1;
 	color: rgba(13, 164, 191, var(--tw-text-opacity));
+}
+.text-pizazz-900 {
+	--tw-text-opacity: 1;
+	color: rgba(46, 26, 0, var(--tw-text-opacity));
+}
+.text-pizazz-700 {
+	--tw-text-opacity: 1;
+	color: rgba(148, 85, 0, var(--tw-text-opacity));
+}
+.text-malibu-900 {
+	--tw-text-opacity: 1;
+	color: rgba(10, 123, 143, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -765,14 +850,29 @@ html {
 	--tw-gradient-to: #FFD194;
 }
 
-.ui-main-wrapper {
-	height: 100vh;
-	height: calc(var(--vh, 1vh) * 100);
+.hover\:border-pizazz-300:hover {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 187, 97, var(--tw-border-opacity));
 }
 
-.hover\:bg-gray-100:hover {
+.hover\:bg-pizazz-500:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+	background-color: rgba(250, 143, 0, var(--tw-bg-opacity));
+}
+
+.hover\:bg-pizazz-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 209, 148, var(--tw-bg-opacity));
+}
+
+.hover\:bg-pizazz-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 231, 199, var(--tw-bg-opacity));
+}
+
+.hover\:text-pizazz-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(148, 85, 0, var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -783,6 +883,10 @@ html {
 
 	.sm\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 }
 
@@ -835,10 +939,5 @@ html {
 	.lg\:py-8 {
 		padding-top: 2rem;
 		padding-bottom: 2rem;
-	}
-
-	.lg\:text-3xl {
-		font-size: 1.875rem;
-		line-height: 2.25rem;
 	}
 }
