--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -595,17 +595,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(227 249 254 / var(--tw-bg-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-pizazz-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 209 148 / var(--tw-bg-opacity));
-}
 .bg-pizazz-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 231 199 / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -635,8 +631,15 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .pt-12 {
   padding-top: 3rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .text-center {
   text-align: center;
@@ -692,10 +695,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(10 123 143 / var(--tw-text-opacity));
 }
-.text-pizazz-900 {
-  --tw-text-opacity: 1;
-  color: rgb(46 26 0 / var(--tw-text-opacity));
-}
 .text-pizazz-800 {
   --tw-text-opacity: 1;
   color: rgb(97 55 0 / var(--tw-text-opacity));
@@ -727,11 +726,6 @@ html {
 .hover\:border-pizazz-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 187 97 / var(--tw-border-opacity));
-}
-
-.hover\:bg-pizazz-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 231 199 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-pizazz-200:hover {
