--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -540,6 +540,9 @@ video {
 .-right-4 {
   right: -1rem;
 }
+.bottom-1 {
+  bottom: 0.25rem;
+}
 .m-1 {
   margin: 0.25rem;
 }
@@ -573,6 +576,10 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
 .mt-12 {
   margin-top: 3rem;
 }
@@ -599,6 +606,9 @@ video {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 .block {
   display: block;
@@ -978,6 +988,10 @@ html {
 
 @media (min-width: 640px) {
 
+  .sm\:bottom-0 {
+    bottom: 0px;
+  }
+
   .sm\:m-0 {
     margin: 0px;
   }
@@ -988,6 +1002,14 @@ html {
 
   .sm\:mt-0 {
     margin-top: 0px;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .sm\:ml-4 {
+    margin-left: 1rem;
   }
 
   .sm\:flex {
@@ -1032,6 +1054,10 @@ html {
 
   .sm\:pt-2 {
     padding-top: 0.5rem;
+  }
+
+  .sm\:pt-12 {
+    padding-top: 3rem;
   }
 }
 
