--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -105,7 +105,7 @@
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }/*
-! tailwindcss v3.4.14 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.15 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -638,27 +638,27 @@ video {
 }
 .border-malibu-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(207 245 252 / var(--tw-border-opacity));
+  border-color: rgb(207 245 252 / var(--tw-border-opacity, 1));
 }
 .border-pizazz-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(255 187 97 / var(--tw-border-opacity));
+  border-color: rgb(255 187 97 / var(--tw-border-opacity, 1));
 }
 .bg-gray-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 .bg-malibu-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(227 249 254 / var(--tw-bg-opacity));
+  background-color: rgb(227 249 254 / var(--tw-bg-opacity, 1));
 }
 .bg-pizazz-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 231 199 / var(--tw-bg-opacity));
+  background-color: rgb(255 231 199 / var(--tw-bg-opacity, 1));
 }
 .bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 .p-3 {
   padding: 0.75rem;
@@ -750,27 +750,27 @@ video {
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 .text-gray-800 {
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 .text-gray-900 {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 .text-malibu-800 {
   --tw-text-opacity: 1;
-  color: rgb(13 164 191 / var(--tw-text-opacity));
+  color: rgb(13 164 191 / var(--tw-text-opacity, 1));
 }
 .text-malibu-900 {
   --tw-text-opacity: 1;
-  color: rgb(10 123 143 / var(--tw-text-opacity));
+  color: rgb(10 123 143 / var(--tw-text-opacity, 1));
 }
 .text-pizazz-800 {
   --tw-text-opacity: 1;
-  color: rgb(97 55 0 / var(--tw-text-opacity));
+  color: rgb(97 55 0 / var(--tw-text-opacity, 1));
 }
 .underline {
   text-decoration-line: underline;
@@ -793,7 +793,7 @@ video {
 
 html {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
   --tw-gradient-from: #70E1F5 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(112 225 245 / 0) var(--tw-gradient-to-position);
@@ -803,22 +803,22 @@ html {
 
 .hover\:border-pizazz-300:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(255 187 97 / var(--tw-border-opacity));
+  border-color: rgb(255 187 97 / var(--tw-border-opacity, 1));
 }
 
 .hover\:bg-pizazz-200:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 209 148 / var(--tw-bg-opacity));
+  background-color: rgb(255 209 148 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-pizazz-700:hover {
   --tw-text-opacity: 1;
-  color: rgb(148 85 0 / var(--tw-text-opacity));
+  color: rgb(148 85 0 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
